--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Portfolio | Under Construction</title>
+    <title>Abdulkadir Yaldiz | Under Construction</title>
     <link href="https://fonts.googleapis.com/css?family=VT323|Raleway|Roboto:400,700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/e2631e2240.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -13,13 +13,12 @@
     <div class="nav">
     <div class="navleft">
         <button><a href="#about" class="nav"><div><span>01 </span>ABOUT</div></a></button> &nbsp 
-        <button><a href="#skills" class="nav"><div><span>02 </span>SKILLS</div></a></button> &nbsp
+        <button><a href="#skills" class="nav"><div><span>02 </span>TEAM</div></a></button> &nbsp
         <button><a href="#works" class="nav"><div><span>03 </span>WORKS</div></a></button>
     </div>
     <div class="navright">
-        <a href="https://github.com/joannamiltner"><i class="fab fa-github" style="color:white;"></i></a> &nbsp
-        <a href="https://www.linkedin.com/in/jo-miltner-5b798859/" style="color:white;"><i class="fab fa-linkedin-in"></i></a> &nbsp
-        <a href="https://drive.google.com/file/d/1qa6vu3edPSivWSe3mddPKSstSWbiNKD-/view?ts=5d8265d3" style="color:white;"><i class="far fa-file-pdf"></i></a> &nbsp
+        <a href="https://github.com/sinancsoysal"><i class="fab fa-github" style="color:white;"></i></a> &nbsp
+        <a href="https://www.linkedin.com/in/abdülkadir-yaldiz-13275a15b/" style="color:white;"><i class="fab fa-linkedin-in"></i></a> &nbsp
     </div>
     </div>
 <div class="container">
