--- a/index.html
+++ b/index.html
@@ -28,7 +28,12 @@
     <div class="progress"><div></div></div>
     <div class="percent"> PROGRESS: <span>70 / 100%</span></div>
     <!-- <div class="percent">PROGRESS: <span>70/100</span></div> -->
-
+</div>
+<div class="container">
+    <div class="qr">
+        <img src="assets/img/qr1.jpeg" width="200px"/>
+        <img src="assets/img/qr2.jpeg" width="200px"/>
+    </div>
 </div>
 </body>
 </html>
